--- a/index.html
+++ b/index.html
@@ -7,8 +7,9 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    <h1>A</h1>
+    <h1>A衝突</h1>
     <h1>B</h1>
+
      
 </body>
 </html>
