--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    <h1>A</h1>
+    <h1>AB衝突</h1>
     <h1>B</h1>
      
 </body>
